<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/noLocationAccessText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_location_access"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/permissionRationaleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_permissions_rationale"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/noLocationAccessText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/permissionInstructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_permissions_instruction"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/permissionRationaleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/goToSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="8dp"
        style="?attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/permissionInstructionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>